Implementación de registro Reservas, extrayendo opciones de la BD y calculando precio según descuento a aplicar

--- a/Negocios/Negocios.csproj
+++ b/Negocios/Negocios.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="negocioCliente.cs" />
     <Compile Include="negocioHabitaciones.cs" />
+    <Compile Include="negocioReserva.cs" />
     <Compile Include="negocioUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
